--- a/processing/03_plot_RGB.ipynb
+++ b/processing/03_plot_RGB.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,49 +100,15 @@
     "    # Create and save the GIF\n",
     "    imageio.mimsave(output_gif, images, duration=0.1)  # Adjust the duration as needed\n",
     "    \n",
-    "def create_daily_goes_gif(date, start_time, end_time):\n",
-    "    start_time_out = start_time.replace(':', '')[:4]\n",
-    "    end_time_out =  end_time.replace(':', '')[:4]\n",
-    "    # Set the initial time and end time\n",
-    "    start_time = datetime.strptime(start_time, '%H:%M:%S')\n",
-    "    end_time = datetime.strptime(end_time, '%H:%M:%S')\n",
-    "    time_of_day = start_time\n",
     "\n",
-    "    # Path to the directory\n",
-    "    plots_dir = './plots'\n",
     "\n",
-    "    # Iterate over all files and directories in the specified directory\n",
-    "    for filename in os.listdir(plots_dir):\n",
-    "        file_path = os.path.join(plots_dir, filename)\n",
-    "        try:\n",
-    "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
-    "                os.unlink(file_path)  # Remove the file or link\n",
-    "            elif os.path.isdir(file_path):\n",
-    "                shutil.rmtree(file_path)  # Remove the directory and its contents\n",
-    "        except Exception as e:\n",
-    "            print(f'Failed to delete {file_path}. Reason: {e}')\n",
     "\n",
-    "    # Loop through every 10 minutes\n",
-    "    while time_of_day <= end_time:\n",
-    "        time_of_day_str = time_of_day.strftime('%H:%M:%S')\n",
-    "        zarr_to_rgb_image(date, time_of_day_str)\n",
-    "        time_of_day += timedelta(minutes=10)\n",
-    "        print(f'Generated RGB image for {time_of_day_str}')\n",
-    "\n",
-    "    # Directory containing PNG images\n",
-    "    png_dir = './plots'\n",
-    "\n",
-    "    # Output GIF file path\n",
-    "    output_gif = f'./goes_RGB_{date}_{start_time_out}_{end_time_out}.gif'\n",
-    "\n",
-    "    # Create the GIF\n",
-    "    create_gif_from_pngs(png_dir, output_gif)\n",
-    "\n",
-    "    print(f\"GIF saved as {output_gif}\")\n",
-    "\n",
-    "# create a mask where the green channel is greater than 0.5 and blue channel is less than 0.2\n",
-    "# set these pixels to red=0, blue=1, green=1\n",
     "def cloud_mask(ds):\n",
+    "    \"\"\"\n",
+    "    create a mask where the green channel is greater than 0.5 and blue channel \n",
+    "    is less than 0.2 set these pixels to red=0, blue=1, green=1\n",
+    "\n",
+    "    \"\"\"\n",
     "\n",
     "    green = ds['green'].values\n",
     "    blue = ds['blue'].values\n",
@@ -153,7 +119,145 @@
     "    ds_masked['green'] = xr.where(mask, 1, ds['green'])\n",
     "    ds_masked['blue'] = xr.where(mask, 1, ds['blue'])\n",
     "\n",
-    "    return ds_masked"
+    "    return ds_masked\n",
+    "\n",
+    "def make_gif(date, start_time, end_time, mask=False):\n",
+    "    \"\"\"\n",
+    "    Create a GIF from GOES data for a specific date and time range.\n",
+    "\n",
+    "    Parameters:\n",
+    "    date (str): The date in 'YYYYMMDD' format.\n",
+    "    start_time (str): The start time in 'HHMM' format.\n",
+    "    end_time (str): The end time in 'HHMM' format.\n",
+    "    mask (bool): Whether to apply a cloud mask.\n",
+    "    \"\"\"\n",
+    "    input_file = f'/storage/cdalden/goes/goes16/RGB_composite/goes16_C02_C05_C13_RGB_colorado_{date}.nc'\n",
+    "    ds = xr.open_dataset(input_file)\n",
+    "\n",
+    "    if mask:\n",
+    "        print('Applying cloud mask...')\n",
+    "        ds = cloud_mask(ds)\n",
+    "    else:\n",
+    "        ds = ds\n",
+    "\n",
+    "\n",
+    "    start_time = datetime.strptime(f\"{date}T{start_time}00\", '%Y%m%dT%H%M%S')\n",
+    "    end_time = datetime.strptime(f\"{date}T{end_time}00\", '%Y%m%dT%H%M%S')\n",
+    "\n",
+    "    ds = ds.sortby('t')\n",
+    "\n",
+    "    # List to store the filenames of the generated plots\n",
+    "    filenames = []\n",
+    "\n",
+    "    # Loop through every 10-minute chunk\n",
+    "    current_time = start_time\n",
+    "    while current_time <= end_time:\n",
+    "        time_str = current_time.strftime('%Y-%m-%dT%H:%M:%S')\n",
+    "        ds_i = ds.sel(t=time_str, method='nearest')\n",
+    "        hour_of_day = current_time.strftime('%H:%M')\n",
+    "        filename = plot_rgb_image(ds_i, date, hour_of_day, gif=True)\n",
+    "        filenames.append(filename)\n",
+    "        current_time += timedelta(minutes=10)\n",
+    "        print(f'Generated RGB image for {time_str}')\n",
+    "\n",
+    "    # Create the GIF\n",
+    "    start_time_out = start_time.strftime('%H%M')\n",
+    "    end_time_out =  end_time.strftime('%H%M')\n",
+    "    if mask:\n",
+    "        output_gif = f'./gifs/masked_goes_RGB_{date}_{start_time_out}_{end_time_out}.gif'\n",
+    "    else:\n",
+    "        output_gif = f'./gifs/goes_RGB_{date}_{start_time_out}_{end_time_out}.gif'\n",
+    "    with imageio.get_writer(output_gif, mode='I', duration=0.5) as writer:\n",
+    "        for filename in filenames:\n",
+    "            image = imageio.imread(filename)\n",
+    "            writer.append_data(image)\n",
+    "\n",
+    "    # Clean up the temporary files\n",
+    "    import os\n",
+    "    for filename in filenames:\n",
+    "        os.remove(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applying cloud mask...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated RGB image for 2023-06-05T14:00:00\n",
+      "Generated RGB image for 2023-06-05T14:10:00\n",
+      "Generated RGB image for 2023-06-05T14:20:00\n",
+      "Generated RGB image for 2023-06-05T14:30:00\n",
+      "Generated RGB image for 2023-06-05T14:40:00\n",
+      "Generated RGB image for 2023-06-05T14:50:00\n",
+      "Generated RGB image for 2023-06-05T15:00:00\n",
+      "Generated RGB image for 2023-06-05T15:10:00\n",
+      "Generated RGB image for 2023-06-05T15:20:00\n",
+      "Generated RGB image for 2023-06-05T15:30:00\n",
+      "Generated RGB image for 2023-06-05T15:40:00\n",
+      "Generated RGB image for 2023-06-05T15:50:00\n",
+      "Generated RGB image for 2023-06-05T16:00:00\n",
+      "Generated RGB image for 2023-06-05T16:10:00\n",
+      "Generated RGB image for 2023-06-05T16:20:00\n",
+      "Generated RGB image for 2023-06-05T16:30:00\n",
+      "Generated RGB image for 2023-06-05T16:40:00\n",
+      "Generated RGB image for 2023-06-05T16:50:00\n",
+      "Generated RGB image for 2023-06-05T17:00:00\n",
+      "Generated RGB image for 2023-06-05T17:10:00\n",
+      "Generated RGB image for 2023-06-05T17:20:00\n",
+      "Generated RGB image for 2023-06-05T17:30:00\n",
+      "Generated RGB image for 2023-06-05T17:40:00\n",
+      "Generated RGB image for 2023-06-05T17:50:00\n",
+      "Generated RGB image for 2023-06-05T18:00:00\n",
+      "Generated RGB image for 2023-06-05T18:10:00\n",
+      "Generated RGB image for 2023-06-05T18:20:00\n",
+      "Generated RGB image for 2023-06-05T18:30:00\n",
+      "Generated RGB image for 2023-06-05T18:40:00\n",
+      "Generated RGB image for 2023-06-05T18:50:00\n",
+      "Generated RGB image for 2023-06-05T19:00:00\n",
+      "Generated RGB image for 2023-06-05T19:10:00\n",
+      "Generated RGB image for 2023-06-05T19:20:00\n",
+      "Generated RGB image for 2023-06-05T19:30:00\n",
+      "Generated RGB image for 2023-06-05T19:40:00\n",
+      "Generated RGB image for 2023-06-05T19:50:00\n",
+      "Generated RGB image for 2023-06-05T20:00:00\n",
+      "Generated RGB image for 2023-06-05T20:10:00\n",
+      "Generated RGB image for 2023-06-05T20:20:00\n",
+      "Generated RGB image for 2023-06-05T20:30:00\n",
+      "Generated RGB image for 2023-06-05T20:40:00\n",
+      "Generated RGB image for 2023-06-05T20:50:00\n",
+      "Generated RGB image for 2023-06-05T21:00:00\n",
+      "Generated RGB image for 2023-06-05T21:10:00\n",
+      "Generated RGB image for 2023-06-05T21:20:00\n",
+      "Generated RGB image for 2023-06-05T21:30:00\n",
+      "Generated RGB image for 2023-06-05T21:40:00\n",
+      "Generated RGB image for 2023-06-05T21:50:00\n",
+      "Generated RGB image for 2023-06-05T22:00:00\n",
+      "Generated RGB image for 2023-06-05T22:10:00\n",
+      "Generated RGB image for 2023-06-05T22:20:00\n",
+      "Generated RGB image for 2023-06-05T22:30:00\n",
+      "Generated RGB image for 2023-06-05T22:40:00\n",
+      "Generated RGB image for 2023-06-05T22:50:00\n",
+      "Generated RGB image for 2023-06-05T23:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "date = '20230605'\n",
+    "start_time = '1400'\n",
+    "end_time = '2300'\n",
+    "\n",
+    "make_gif(date, start_time, end_time, mask=True)"
    ]
   },
   {
@@ -162,7 +266,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date = '20230209'\n",
+    "\n",
+    "\n",
+    "\n",
     "input_file = f'/storage/cdalden/goes/goes16/RGB_composite/goes16_C02_C05_C13_RGB_colorado_{date}.nc'\n",
     "ds = xr.open_dataset(input_file)"
    ]
@@ -178,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -234,8 +340,8 @@
    "source": [
     "# Define the start and end times\n",
     "# date = '20230205'\n",
-    "start_time = datetime.strptime('2023-02-09T16:00:00', '%Y-%m-%dT%H:%M:%S')\n",
-    "end_time = datetime.strptime('2023-02-09T23:00:00', '%Y-%m-%dT%H:%M:%S')\n",
+    "start_time = datetime.strptime(f\"{date}T{start_time}00\", '%Y%m%dT%H%M%S')\n",
+    "end_time = datetime.strptime(f\"{date}T{end_time}00\", '%Y%m%dT%H%M%S')\n",
     "\n",
     "ds = ds.sortby('t')\n",
     "\n",
@@ -256,7 +362,7 @@
     "# Create the GIF\n",
     "start_time_out = start_time.strftime('%H%M')\n",
     "end_time_out =  end_time.strftime('%H%M')\n",
-    "output_gif = f'./masked_goes_RGB_{date}_{start_time_out}_{end_time_out}.gif'\n",
+    "output_gif = f'./gifs/masked_goes_RGB_{date}_{start_time_out}_{end_time_out}.gif'\n",
     "with imageio.get_writer(output_gif, mode='I', duration=0.5) as writer:\n",
     "    for filename in filenames:\n",
     "        image = imageio.imread(filename)\n",
@@ -292,36 +398,13 @@
     "from moviepy.editor import VideoFileClip\n",
     "\n",
     "# Load the GIF\n",
-    "clip = VideoFileClip(f\"/home/cdalden/goes_work/processing/masked_goes_RGB_{date}_1600_2300.gif\")\n",
+    "clip = VideoFileClip(f\"/home/cdalden/goes_work/processing/masked_goes_RGB_{date}_{start_time}_{end_time}.gif\")\n",
     "# Check the duration and frame count\n",
     "print(f\"Duration: {clip.duration} seconds\")\n",
     "print(f\"FPS: {clip.fps}\")\n",
     "print(f\"Frame count: {clip.duration * clip.fps}\")\n",
     "# Save as MP4\n",
     "# clip.write_videofile(f\"goes_RGB_{date}_1600_2300.mp4\", codec=\"libx264\", fps=30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frame count: 43\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Load the GIF\n",
-    "gif_path = \"/home/cdalden/goes_work/processing/goes_RGB_20230605_1600_2300.gif\"\n",
-    "gif = imageio.get_reader(gif_path)\n",
-    "\n",
-    "# Count the frames\n",
-    "frame_count = sum(1 for _ in gif)\n",
-    "print(f\"Frame count: {frame_count}\")"
    ]
   },
   {
@@ -369,6 +452,7 @@
    "source": [
     "path = '/storage/cdalden/goes/goes16/'\n",
     "date = '20230209'\n",
+    "start_time = '1800'\n",
     "# ds = goes_rad_to_rgb(path, date)\n"
    ]
   },
@@ -395,7 +479,13 @@
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Combine into a full datetime string\n",
+    "datetime_str = f\"{date}T{start_time}00\"  # Add seconds (00)\n",
+    "\n",
+    "# Parse the string into a datetime object\n",
+    "dt = datetime.strptime(datetime_str, '%Y%m%dT%H%M%S')\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -424,7 +514,7 @@
     }
    ],
    "source": [
-    "time_of_day = datetime.strptime('2023-02-09T18:00:00', '%Y-%m-%dT%H:%M:%S')\n",
+    "time_of_day = datetime.strptime(datetime_str, '%Y%m%dT%H%M%S')\n",
     "hour_of_day = time_of_day.strftime('%H:%M')\n",
     "ds_i = ds.sel(t=time_of_day, method='nearest')\n",
     "plot_rgb_image(ds_i, date, hour_of_day, gif=False)\n",
