trying to parallelize the nc to zarr func

--- a/processing/00_goes_rad_corrections.ipynb
+++ b/processing/00_goes_rad_corrections.ipynb
@@ -1599,14 +1599,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def goes_nc_to_zarr_parallel(in_dir, out_dir, out_name, channel):\n",
     "    import os\n",
+    "    import dask\n",
     "    import xarray as xr\n",
-    "    from dask.distributed import Client\n",
     "\n",
     "    # Ensure the output directory exists\n",
     "    os.makedirs(out_dir, exist_ok=True)\n",
@@ -1619,17 +1619,22 @@
     "                nc_files.append(os.path.join(root, file))\n",
     "                print(file)\n",
     "\n",
-    "    # Start a Dask client with 16 workers\n",
-    "    client = Client(n_workers=16, threads_per_worker=1)\n",
+    "    from dask.distributed import Client\n",
+    "\n",
+    "    # Start a Dask client to manage parallelism\n",
+    "    client = Client()\n",
+    "\n",
+    "    #   Print information about the Dask cluster\n",
     "    print(client)\n",
     "\n",
-    "    # Use xarray's open_mfdataset for lazy loading and parallelized concatenation\n",
-    "    combined_ds = xr.open_mfdataset(\n",
-    "        nc_files,\n",
-    "        combine=\"by_coords\",\n",
-    "        parallel=True,\n",
-    "        engine=\"netcdf4\"  # Specify the NetCDF engine for compatibility\n",
-    "    )\n",
+    "    # Open multiple NetCDF files as a list of lazy Dask datasets\n",
+    "    datasets = [dask.delayed(xr.open_dataset)(f) for f in nc_files]\n",
+    "\n",
+    "    # Compute the datasets in parallel\n",
+    "    datasets = dask.compute(*datasets)\n",
+    "\n",
+    "    # Concatenate datasets along the 't' coordinate\n",
+    "    combined_ds = xr.concat(datasets, dim='t')\n",
     "\n",
     "    # Save the combined dataset to a Zarr file\n",
     "    combined_ds.to_zarr(os.path.join(out_dir, out_name))\n",
@@ -1639,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1936,8 +1941,24 @@
       "OR_ABI-L1b-RadC-M6C02_G17_s20222132341177_e20222132343550_c20222132343570.nc\n",
       "OR_ABI-L1b-RadC-M6C02_G17_s20222132346177_e20222132348550_c20222132348568.nc\n",
       "OR_ABI-L1b-RadC-M6C02_G17_s20222132351177_e20222132353550_c20222132353572.nc\n",
-      "OR_ABI-L1b-RadC-M6C02_G17_s20222132356177_e20222132358550_c20222132358570.nc\n",
-      "<Client: 'tcp://127.0.0.1:36627' processes=16 threads=16, memory=62.82 GiB>\n"
+      "OR_ABI-L1b-RadC-M6C02_G17_s20222132356177_e20222132358550_c20222132358570.nc\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/distributed/node.py:187: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 42243 instead\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Client: 'tcp://127.0.0.1:43887' processes=6 threads=24, memory=62.82 GiB>\n"
      ]
     },
     {
@@ -1955,43 +1976,7 @@
       "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
       "  _set_context_ca_bundle_path(ca_bundle_path)\n",
       "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
-      "  _set_context_ca_bundle_path(ca_bundle_path)\n",
-      "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
-      "  _set_context_ca_bundle_path(ca_bundle_path)\n",
-      "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
-      "  _set_context_ca_bundle_path(ca_bundle_path)\n",
-      "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
-      "  _set_context_ca_bundle_path(ca_bundle_path)\n",
-      "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
-      "  _set_context_ca_bundle_path(ca_bundle_path)\n",
-      "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
-      "  _set_context_ca_bundle_path(ca_bundle_path)\n",
-      "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
-      "  _set_context_ca_bundle_path(ca_bundle_path)\n",
-      "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
-      "  _set_context_ca_bundle_path(ca_bundle_path)\n",
-      "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
-      "  _set_context_ca_bundle_path(ca_bundle_path)\n",
-      "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
-      "  _set_context_ca_bundle_path(ca_bundle_path)\n",
-      "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
       "  _set_context_ca_bundle_path(ca_bundle_path)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Resulting object does not have monotonic global indexes along dimension x",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 28\u001b[39m\n\u001b[32m     25\u001b[39m     out_name = \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgoes\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mchannel\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlocation\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdate\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.zarr\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     27\u001b[39m     \u001b[38;5;28mprint\u001b[39m(in_dir)\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m     \u001b[43mgoes_nc_to_zarr_parallel\u001b[49m\u001b[43m(\u001b[49m\u001b[43min_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchannel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     29\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33m***Finished channel C\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mchannel\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmonth\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mday_of_month\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n\u001b[32m     30\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33m***Finished Feb \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mday_of_month\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 22\u001b[39m, in \u001b[36mgoes_nc_to_zarr_parallel\u001b[39m\u001b[34m(in_dir, out_dir, out_name, channel)\u001b[39m\n\u001b[32m     19\u001b[39m \u001b[38;5;28mprint\u001b[39m(client)\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# Use xarray's open_mfdataset for lazy loading and parallelized concatenation\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m combined_ds = \u001b[43mxr\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopen_mfdataset\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     23\u001b[39m \u001b[43m    \u001b[49m\u001b[43mnc_files\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     24\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcombine\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mby_coords\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     25\u001b[39m \u001b[43m    \u001b[49m\u001b[43mparallel\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m     26\u001b[39m \u001b[43m    \u001b[49m\u001b[43mengine\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mnetcdf4\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Specify the NetCDF engine for compatibility\u001b[39;49;00m\n\u001b[32m     27\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     29\u001b[39m \u001b[38;5;66;03m# Save the combined dataset to a Zarr file\u001b[39;00m\n\u001b[32m     30\u001b[39m combined_ds.to_zarr(os.path.join(out_dir, out_name))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/envs/goes_old/lib/python3.13/site-packages/xarray/backends/api.py:1663\u001b[39m, in \u001b[36mopen_mfdataset\u001b[39m\u001b[34m(paths, chunks, concat_dim, compat, preprocess, engine, data_vars, coords, combine, parallel, join, attrs_file, combine_attrs, **kwargs)\u001b[39m\n\u001b[32m   1650\u001b[39m     combined = _nested_combine(\n\u001b[32m   1651\u001b[39m         datasets,\n\u001b[32m   1652\u001b[39m         concat_dims=concat_dim,\n\u001b[32m   (...)\u001b[39m\u001b[32m   1658\u001b[39m         combine_attrs=combine_attrs,\n\u001b[32m   1659\u001b[39m     )\n\u001b[32m   1660\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m combine == \u001b[33m\"\u001b[39m\u001b[33mby_coords\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m   1661\u001b[39m     \u001b[38;5;66;03m# Redo ordering from coordinates, ignoring how they were ordered\u001b[39;00m\n\u001b[32m   1662\u001b[39m     \u001b[38;5;66;03m# previously\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1663\u001b[39m     combined = \u001b[43mcombine_by_coords\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1664\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdatasets\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1665\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcompat\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcompat\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1666\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdata_vars\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdata_vars\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1667\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcoords\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcoords\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1668\u001b[39m \u001b[43m        \u001b[49m\u001b[43mjoin\u001b[49m\u001b[43m=\u001b[49m\u001b[43mjoin\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1669\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcombine_attrs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcombine_attrs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1670\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1671\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   1672\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m   1673\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcombine\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m is an invalid option for the keyword argument ``combine``\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1674\u001b[39m     )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/envs/goes_old/lib/python3.13/site-packages/xarray/structure/combine.py:983\u001b[39m, in \u001b[36mcombine_by_coords\u001b[39m\u001b[34m(data_objects, compat, data_vars, coords, fill_value, join, combine_attrs)\u001b[39m\n\u001b[32m    979\u001b[39m     grouped_by_vars = groupby_defaultdict(data_objects, key=vars_as_keys)\n\u001b[32m    981\u001b[39m     \u001b[38;5;66;03m# Perform the multidimensional combine on each group of data variables\u001b[39;00m\n\u001b[32m    982\u001b[39m     \u001b[38;5;66;03m# before merging back together\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m983\u001b[39m     concatenated_grouped_by_data_vars = \u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\n\u001b[32m    984\u001b[39m \u001b[43m        \u001b[49m\u001b[43m_combine_single_variable_hypercube\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    985\u001b[39m \u001b[43m            \u001b[49m\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdatasets_with_same_vars\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    986\u001b[39m \u001b[43m            \u001b[49m\u001b[43mfill_value\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfill_value\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    987\u001b[39m \u001b[43m            \u001b[49m\u001b[43mdata_vars\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdata_vars\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    988\u001b[39m \u001b[43m            \u001b[49m\u001b[43mcoords\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcoords\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    989\u001b[39m \u001b[43m            \u001b[49m\u001b[43mcompat\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcompat\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    990\u001b[39m \u001b[43m            \u001b[49m\u001b[43mjoin\u001b[49m\u001b[43m=\u001b[49m\u001b[43mjoin\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    991\u001b[39m \u001b[43m            \u001b[49m\u001b[43mcombine_attrs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcombine_attrs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    992\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    993\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mvars\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdatasets_with_same_vars\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mgrouped_by_vars\u001b[49m\n\u001b[32m    994\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    996\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m merge(\n\u001b[32m    997\u001b[39m     concatenated_grouped_by_data_vars,\n\u001b[32m    998\u001b[39m     compat=compat,\n\u001b[32m   (...)\u001b[39m\u001b[32m   1001\u001b[39m     combine_attrs=combine_attrs,\n\u001b[32m   1002\u001b[39m )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/envs/goes_old/lib/python3.13/site-packages/xarray/structure/combine.py:984\u001b[39m, in \u001b[36m<genexpr>\u001b[39m\u001b[34m(.0)\u001b[39m\n\u001b[32m    979\u001b[39m     grouped_by_vars = groupby_defaultdict(data_objects, key=vars_as_keys)\n\u001b[32m    981\u001b[39m     \u001b[38;5;66;03m# Perform the multidimensional combine on each group of data variables\u001b[39;00m\n\u001b[32m    982\u001b[39m     \u001b[38;5;66;03m# before merging back together\u001b[39;00m\n\u001b[32m    983\u001b[39m     concatenated_grouped_by_data_vars = \u001b[38;5;28mtuple\u001b[39m(\n\u001b[32m--> \u001b[39m\u001b[32m984\u001b[39m         \u001b[43m_combine_single_variable_hypercube\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    985\u001b[39m \u001b[43m            \u001b[49m\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdatasets_with_same_vars\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    986\u001b[39m \u001b[43m            \u001b[49m\u001b[43mfill_value\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfill_value\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    987\u001b[39m \u001b[43m            \u001b[49m\u001b[43mdata_vars\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdata_vars\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    988\u001b[39m \u001b[43m            \u001b[49m\u001b[43mcoords\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcoords\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    989\u001b[39m \u001b[43m            \u001b[49m\u001b[43mcompat\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcompat\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    990\u001b[39m \u001b[43m            \u001b[49m\u001b[43mjoin\u001b[49m\u001b[43m=\u001b[49m\u001b[43mjoin\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    991\u001b[39m \u001b[43m            \u001b[49m\u001b[43mcombine_attrs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcombine_attrs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    992\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    993\u001b[39m         \u001b[38;5;28;01mfor\u001b[39;00m \u001b[38;5;28mvars\u001b[39m, datasets_with_same_vars \u001b[38;5;129;01min\u001b[39;00m grouped_by_vars\n\u001b[32m    994\u001b[39m     )\n\u001b[32m    996\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m merge(\n\u001b[32m    997\u001b[39m     concatenated_grouped_by_data_vars,\n\u001b[32m    998\u001b[39m     compat=compat,\n\u001b[32m   (...)\u001b[39m\u001b[32m   1001\u001b[39m     combine_attrs=combine_attrs,\n\u001b[32m   1002\u001b[39m )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/envs/goes_old/lib/python3.13/site-packages/xarray/structure/combine.py:671\u001b[39m, in \u001b[36m_combine_single_variable_hypercube\u001b[39m\u001b[34m(datasets, fill_value, data_vars, coords, compat, join, combine_attrs)\u001b[39m\n\u001b[32m    669\u001b[39m     indexes = concatenated.indexes.get(dim)\n\u001b[32m    670\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (indexes.is_monotonic_increasing \u001b[38;5;129;01mor\u001b[39;00m indexes.is_monotonic_decreasing):\n\u001b[32m--> \u001b[39m\u001b[32m671\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    672\u001b[39m             \u001b[33m\"\u001b[39m\u001b[33mResulting object does not have monotonic\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    673\u001b[39m             \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m global indexes along dimension \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdim\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    674\u001b[39m         )\n\u001b[32m    676\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m concatenated\n",
-      "\u001b[31mValueError\u001b[39m: Resulting object does not have monotonic global indexes along dimension x"
      ]
     }
    ],
