--- a/processing/00_goes_rad_corrections.ipynb
+++ b/processing/00_goes_rad_corrections.ipynb
@@ -1976,7 +1976,17 @@
       "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
       "  _set_context_ca_bundle_path(ca_bundle_path)\n",
       "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
-      "  _set_context_ca_bundle_path(ca_bundle_path)\n"
+      "  _set_context_ca_bundle_path(ca_bundle_path)\n",
+      "Exception ignored in: <function CachingFileManager.__del__ at 0x7f8672a4f600>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/xarray/backends/file_manager.py\", line 250, in __del__\n",
+      "    self.close(needs_lock=False)\n",
+      "  File \"/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/xarray/backends/file_manager.py\", line 234, in close\n",
+      "    file.close()\n",
+      "  File \"src/netCDF4/_netCDF4.pyx\", line 2669, in netCDF4._netCDF4.Dataset.close\n",
+      "  File \"src/netCDF4/_netCDF4.pyx\", line 2636, in netCDF4._netCDF4.Dataset._close\n",
+      "  File \"src/netCDF4/_netCDF4.pyx\", line 2164, in netCDF4._netCDF4._ensure_nc_success\n",
+      "RuntimeError: NetCDF: Not a valid ID\n"
      ]
     }
    ],
