modified nc to zarr functions

--- a/processing/00_goes_rad_corrections.ipynb
+++ b/processing/00_goes_rad_corrections.ipynb
@@ -1557,11 +1557,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import utils"
+    "import utils\n",
+    "import os\n",
+    "import xarray as xr\n",
+    "import gc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def goes_nc_to_zarr(in_dir, channels, startday, endday, month, year, location='washington', goes_model='goes17'):\n",
+    "    \"\"\"\n",
+    "    Convert multiple NetCDF files from a directory to a single Zarr file.\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    in_dir : str\n",
+    "        Input directory containing NetCDF files.\n",
+    "    channels : list\n",
+    "        List of channels to process (e.g., ['C13', 'C02', 'C05']).\n",
+    "    startday : int\n",
+    "        Starting day of the month for processing.\n",
+    "    endday : int\n",
+    "        Ending day of the month for processing.\n",
+    "    month : int\n",
+    "        Month of the data to process.\n",
+    "    year : int\n",
+    "        Year of the data to process.\n",
+    "    location : str\n",
+    "        Location identifier (e.g., 'washington').\n",
+    "    goes_model : str\n",
+    "        GOES satellite model (e.g., 'goes17').\n",
+    "\n",
+    "    Example usage:\n",
+    "    >>> goes_nc_to_zarr('/path/to/nc_files/', '/path/to/output/', 'goes17_C13_washington_20220801.zarr', 1, 31, 2022, 8, 'washington', 'goes17')\n",
+    "    \"\"\" \n",
+    "    # return print(f\"Zarr file saved to {out_dir+out_name}\")\n",
+    "    if not startday:\n",
+    "        startday = 1\n",
+    "    if not endday:\n",
+    "        endday = 31\n",
+    "\n",
+    "    for day in range(startday,endday+1):\n",
+    "        day_of_month = str(day)\n",
+    "        if day<10:\n",
+    "            out_day_of_month = '0' + day_of_month\n",
+    "        else:\n",
+    "            out_day_of_month = day_of_month\n",
+    "        print(f'Starting {str(month)} {day_of_month}')\n",
+    "        # in_dir = f'/storage/cdalden/goes/washington/goes17/2022/8/{day_of_month}/'\n",
+    "        # out_dir = '/storage/cdalden/goes/washington/goes17/'\n",
+    "\n",
+    "\n",
+    "        for channel in channels:\n",
+    "            out_name = f'{str(goes_model)}_{channel}_{location}_{str(year)}0{str(month)}{out_day_of_month}.zarr'\n",
+    "            print(f'Processing {out_name}...')\n",
+    "            # Directory containing the NetCDF files\n",
+    "            nc_dir = in_dir + f'{goes_model}/{year}/{month}/{day_of_month}/'\n",
+    "            # Ensure the directory exists\n",
+    "            print(f'Looking for NetCDF files in {nc_dir}')\n",
+    "            \n",
+    "            # Recursively list all NetCDF files in the directory and subdirectories\n",
+    "            nc_files = []\n",
+    "            for root, dirs, files in os.walk(nc_dir):\n",
+    "                for file in files:\n",
+    "                    # print(file)\n",
+    "                    if file.endswith('.nc') and channel in file:\n",
+    "                        nc_files.append(os.path.join(root, file))\n",
+    "\n",
+    "            # Open multiple NetCDF files as a list of datasets\n",
+    "            datasets = [xr.open_dataset(f) for f in nc_files]\n",
+    "\n",
+    "            # Concatenate datasets along the 't' coordinate\n",
+    "            combined_ds = xr.concat(datasets, dim='t')\n",
+    "\n",
+    "            # Save the combined dataset to a Zarr file\n",
+    "            out_name = out_name\n",
+    "            combined_ds.to_zarr(in_dir+f'{goes_model}/{channel}'+out_name)\n",
+    "\n",
+    "            # Force garbage collection to free memory\n",
+    "            gc.collect()\n",
+    "            print('beep beep, here comes the garbage truck')\n",
+    "            print(f'Finished {channel} for {out_day_of_month}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting 8 1\n",
+      "Processing goes17_C13_washington_20220801.zarr...\n",
+      "Looking for NetCDF files in /storage/cdalden/goes/washington/goes17/2022/8/1/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/pyproj/network.py:59: UserWarning: pyproj unable to set PROJ database path.\n",
+      "  _set_context_ca_bundle_path(ca_bundle_path)\n",
+      "/home/cdalden/miniforge3/envs/goes_old/lib/python3.13/site-packages/zarr/api/asynchronous.py:203: UserWarning: Consolidated metadata is currently not part in the Zarr format 3 specification. It may not be supported by other zarr implementations and may change in the future.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "beep beep, here comes the garbage truck\n",
+      "Finished C13 for 01\n",
+      "Processing goes17_C02_washington_20220801.zarr...\n",
+      "Looking for NetCDF files in /storage/cdalden/goes/washington/goes17/2022/8/1/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "in_dir = f'/storage/cdalden/goes/washington/'\n",
+    "goes_nc_to_zarr(in_dir, ['C13', 'C02', 'C05'], 1, 2, 8, 2022, 'washington', 'goes17')"
    ]
   },
   {
@@ -1986,7 +2118,21 @@
       "  File \"src/netCDF4/_netCDF4.pyx\", line 2669, in netCDF4._netCDF4.Dataset.close\n",
       "  File \"src/netCDF4/_netCDF4.pyx\", line 2636, in netCDF4._netCDF4.Dataset._close\n",
       "  File \"src/netCDF4/_netCDF4.pyx\", line 2164, in netCDF4._netCDF4._ensure_nc_success\n",
-      "RuntimeError: NetCDF: Not a valid ID\n"
+      "RuntimeError: NetCDF: Not a valid ID\n",
+      "2025-07-03 15:28:54,775 - distributed.nanny - WARNING - Restarting worker\n",
+      "2025-07-03 15:28:57,836 - distributed.nanny - WARNING - Restarting worker\n",
+      "2025-07-03 15:29:00,580 - distributed.nanny - WARNING - Restarting worker\n",
+      "2025-07-03 15:29:01,038 - distributed.nanny - WARNING - Restarting worker\n",
+      "2025-07-03 15:29:06,665 - distributed.nanny - WARNING - Restarting worker\n",
+      "2025-07-03 15:29:39,901 - distributed.nanny - WARNING - Restarting worker\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
