--- a/processing/03_plot_RGB.ipynb
+++ b/processing/03_plot_RGB.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,24 +121,23 @@
     "\n",
     "    return ds_masked\n",
     "\n",
-    "def make_gif(date, start_time, end_time, mask=False):\n",
+    "def make_gif(ds, date, start_time, end_time, mask=False):\n",
     "    \"\"\"\n",
     "    Create a GIF from GOES data for a specific date and time range.\n",
     "\n",
     "    Parameters:\n",
+    "    ds(xarray.Dataset): The dataset containing the GOES data.\n",
     "    date (str): The date in 'YYYYMMDD' format.\n",
     "    start_time (str): The start time in 'HHMM' format.\n",
     "    end_time (str): The end time in 'HHMM' format.\n",
     "    mask (bool): Whether to apply a cloud mask.\n",
     "    \"\"\"\n",
-    "    input_file = f'/storage/cdalden/goes/goes16/RGB_composite/goes16_C02_C05_C13_RGB_colorado_{date}.nc'\n",
-    "    ds = xr.open_dataset(input_file)\n",
+    "    # input_file = f'/storage/cdalden/goes/goes16/RGB_composite/goes16_C02_C05_C13_RGB_colorado_{date}.nc'\n",
+    "    # ds = xr.open_dataset(input_file)\n",
     "\n",
     "    if mask:\n",
     "        print('Applying cloud mask...')\n",
     "        ds = cloud_mask(ds)\n",
-    "    else:\n",
-    "        ds = ds\n",
     "\n",
     "\n",
     "    start_time = datetime.strptime(f\"{date}T{start_time}00\", '%Y%m%dT%H%M%S')\n",
@@ -180,84 +179,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Applying cloud mask...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generated RGB image for 2023-06-05T14:00:00\n",
-      "Generated RGB image for 2023-06-05T14:10:00\n",
-      "Generated RGB image for 2023-06-05T14:20:00\n",
-      "Generated RGB image for 2023-06-05T14:30:00\n",
-      "Generated RGB image for 2023-06-05T14:40:00\n",
-      "Generated RGB image for 2023-06-05T14:50:00\n",
-      "Generated RGB image for 2023-06-05T15:00:00\n",
-      "Generated RGB image for 2023-06-05T15:10:00\n",
-      "Generated RGB image for 2023-06-05T15:20:00\n",
-      "Generated RGB image for 2023-06-05T15:30:00\n",
-      "Generated RGB image for 2023-06-05T15:40:00\n",
-      "Generated RGB image for 2023-06-05T15:50:00\n",
-      "Generated RGB image for 2023-06-05T16:00:00\n",
-      "Generated RGB image for 2023-06-05T16:10:00\n",
-      "Generated RGB image for 2023-06-05T16:20:00\n",
-      "Generated RGB image for 2023-06-05T16:30:00\n",
-      "Generated RGB image for 2023-06-05T16:40:00\n",
-      "Generated RGB image for 2023-06-05T16:50:00\n",
-      "Generated RGB image for 2023-06-05T17:00:00\n",
-      "Generated RGB image for 2023-06-05T17:10:00\n",
-      "Generated RGB image for 2023-06-05T17:20:00\n",
-      "Generated RGB image for 2023-06-05T17:30:00\n",
-      "Generated RGB image for 2023-06-05T17:40:00\n",
-      "Generated RGB image for 2023-06-05T17:50:00\n",
-      "Generated RGB image for 2023-06-05T18:00:00\n",
-      "Generated RGB image for 2023-06-05T18:10:00\n",
-      "Generated RGB image for 2023-06-05T18:20:00\n",
-      "Generated RGB image for 2023-06-05T18:30:00\n",
-      "Generated RGB image for 2023-06-05T18:40:00\n",
-      "Generated RGB image for 2023-06-05T18:50:00\n",
-      "Generated RGB image for 2023-06-05T19:00:00\n",
-      "Generated RGB image for 2023-06-05T19:10:00\n",
-      "Generated RGB image for 2023-06-05T19:20:00\n",
-      "Generated RGB image for 2023-06-05T19:30:00\n",
-      "Generated RGB image for 2023-06-05T19:40:00\n",
-      "Generated RGB image for 2023-06-05T19:50:00\n",
-      "Generated RGB image for 2023-06-05T20:00:00\n",
-      "Generated RGB image for 2023-06-05T20:10:00\n",
-      "Generated RGB image for 2023-06-05T20:20:00\n",
-      "Generated RGB image for 2023-06-05T20:30:00\n",
-      "Generated RGB image for 2023-06-05T20:40:00\n",
-      "Generated RGB image for 2023-06-05T20:50:00\n",
-      "Generated RGB image for 2023-06-05T21:00:00\n",
-      "Generated RGB image for 2023-06-05T21:10:00\n",
-      "Generated RGB image for 2023-06-05T21:20:00\n",
-      "Generated RGB image for 2023-06-05T21:30:00\n",
-      "Generated RGB image for 2023-06-05T21:40:00\n",
-      "Generated RGB image for 2023-06-05T21:50:00\n",
-      "Generated RGB image for 2023-06-05T22:00:00\n",
-      "Generated RGB image for 2023-06-05T22:10:00\n",
-      "Generated RGB image for 2023-06-05T22:20:00\n",
-      "Generated RGB image for 2023-06-05T22:30:00\n",
-      "Generated RGB image for 2023-06-05T22:40:00\n",
-      "Generated RGB image for 2023-06-05T22:50:00\n",
-      "Generated RGB image for 2023-06-05T23:00:00\n"
+      "Generated RGB image for 2022-08-02T14:00:00\n",
+      "Generated RGB image for 2022-08-02T14:10:00\n",
+      "Generated RGB image for 2022-08-02T14:20:00\n",
+      "Generated RGB image for 2022-08-02T14:30:00\n",
+      "Generated RGB image for 2022-08-02T14:40:00\n",
+      "Generated RGB image for 2022-08-02T14:50:00\n",
+      "Generated RGB image for 2022-08-02T15:00:00\n",
+      "Generated RGB image for 2022-08-02T15:10:00\n",
+      "Generated RGB image for 2022-08-02T15:20:00\n",
+      "Generated RGB image for 2022-08-02T15:30:00\n",
+      "Generated RGB image for 2022-08-02T15:40:00\n",
+      "Generated RGB image for 2022-08-02T15:50:00\n",
+      "Generated RGB image for 2022-08-02T16:00:00\n",
+      "Generated RGB image for 2022-08-02T16:10:00\n",
+      "Generated RGB image for 2022-08-02T16:20:00\n",
+      "Generated RGB image for 2022-08-02T16:30:00\n",
+      "Generated RGB image for 2022-08-02T16:40:00\n",
+      "Generated RGB image for 2022-08-02T16:50:00\n",
+      "Generated RGB image for 2022-08-02T17:00:00\n",
+      "Generated RGB image for 2022-08-02T17:10:00\n",
+      "Generated RGB image for 2022-08-02T17:20:00\n",
+      "Generated RGB image for 2022-08-02T17:30:00\n",
+      "Generated RGB image for 2022-08-02T17:40:00\n",
+      "Generated RGB image for 2022-08-02T17:50:00\n",
+      "Generated RGB image for 2022-08-02T18:00:00\n",
+      "Generated RGB image for 2022-08-02T18:10:00\n",
+      "Generated RGB image for 2022-08-02T18:20:00\n",
+      "Generated RGB image for 2022-08-02T18:30:00\n",
+      "Generated RGB image for 2022-08-02T18:40:00\n",
+      "Generated RGB image for 2022-08-02T18:50:00\n",
+      "Generated RGB image for 2022-08-02T19:00:00\n",
+      "Generated RGB image for 2022-08-02T19:10:00\n",
+      "Generated RGB image for 2022-08-02T19:20:00\n",
+      "Generated RGB image for 2022-08-02T19:30:00\n",
+      "Generated RGB image for 2022-08-02T19:40:00\n",
+      "Generated RGB image for 2022-08-02T19:50:00\n",
+      "Generated RGB image for 2022-08-02T20:00:00\n",
+      "Generated RGB image for 2022-08-02T20:10:00\n",
+      "Generated RGB image for 2022-08-02T20:20:00\n",
+      "Generated RGB image for 2022-08-02T20:30:00\n",
+      "Generated RGB image for 2022-08-02T20:40:00\n",
+      "Generated RGB image for 2022-08-02T20:50:00\n",
+      "Generated RGB image for 2022-08-02T21:00:00\n",
+      "Generated RGB image for 2022-08-02T21:10:00\n",
+      "Generated RGB image for 2022-08-02T21:20:00\n",
+      "Generated RGB image for 2022-08-02T21:30:00\n",
+      "Generated RGB image for 2022-08-02T21:40:00\n",
+      "Generated RGB image for 2022-08-02T21:50:00\n",
+      "Generated RGB image for 2022-08-02T22:00:00\n",
+      "Generated RGB image for 2022-08-02T22:10:00\n",
+      "Generated RGB image for 2022-08-02T22:20:00\n",
+      "Generated RGB image for 2022-08-02T22:30:00\n",
+      "Generated RGB image for 2022-08-02T22:40:00\n",
+      "Generated RGB image for 2022-08-02T22:50:00\n",
+      "Generated RGB image for 2022-08-02T23:00:00\n",
+      "Generated RGB image for 2022-08-02T23:10:00\n",
+      "Generated RGB image for 2022-08-02T23:20:00\n",
+      "Generated RGB image for 2022-08-02T23:30:00\n",
+      "Generated RGB image for 2022-08-02T23:40:00\n",
+      "Generated RGB image for 2022-08-02T23:50:00\n"
      ]
     }
    ],
    "source": [
-    "date = '20230605'\n",
+    "date = '20220802'\n",
     "start_time = '1400'\n",
-    "end_time = '2300'\n",
+    "end_time = '2355'\n",
     "\n",
-    "make_gif(date, start_time, end_time, mask=True)"
+    "path = '/storage/cdalden/goes/washington/goes17/rgb_composite/'\n",
+    "file = f'goes17_C02_C05_C13_rgb_washington_{date}.nc'\n",
+    "ds = xr.open_dataset(path+file)\n",
+    "\n",
+    "make_gif(ds, date, start_time, end_time, mask=False)"
    ]
   },
   {
