--- a/analysis/00_plot_RGB.ipynb
+++ b/analysis/00_plot_RGB.ipynb
@@ -63,8 +63,8 @@
     "    rgb_image = np.stack([red_resized, green_resized, blue_resized], axis=-1)\n",
     "\n",
     "    # Extract longitude and latitude values\n",
-    "    lon = ds['x'].values\n",
-    "    lat = ds['y'].values\n",
+    "    lon = ds['longitude'].values\n",
+    "    lat = ds['latitude'].values\n",
     "\n",
     "    # Plot the RGB image using matplotlib's imshow\n",
     "    rgb_plot = plt.imshow(rgb_image, extent=[lon.min(), lon.max(), lat.min(), lat.max()])\n",
@@ -163,78 +163,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated RGB image for 2022-08-02T14:00:00\n",
-      "Generated RGB image for 2022-08-02T14:10:00\n",
-      "Generated RGB image for 2022-08-02T14:20:00\n",
-      "Generated RGB image for 2022-08-02T14:30:00\n",
-      "Generated RGB image for 2022-08-02T14:40:00\n",
-      "Generated RGB image for 2022-08-02T14:50:00\n",
-      "Generated RGB image for 2022-08-02T15:00:00\n",
-      "Generated RGB image for 2022-08-02T15:10:00\n",
-      "Generated RGB image for 2022-08-02T15:20:00\n",
-      "Generated RGB image for 2022-08-02T15:30:00\n",
-      "Generated RGB image for 2022-08-02T15:40:00\n",
-      "Generated RGB image for 2022-08-02T15:50:00\n",
-      "Generated RGB image for 2022-08-02T16:00:00\n",
-      "Generated RGB image for 2022-08-02T16:10:00\n",
-      "Generated RGB image for 2022-08-02T16:20:00\n",
-      "Generated RGB image for 2022-08-02T16:30:00\n",
-      "Generated RGB image for 2022-08-02T16:40:00\n",
-      "Generated RGB image for 2022-08-02T16:50:00\n",
-      "Generated RGB image for 2022-08-02T17:00:00\n",
-      "Generated RGB image for 2022-08-02T17:10:00\n",
-      "Generated RGB image for 2022-08-02T17:20:00\n",
-      "Generated RGB image for 2022-08-02T17:30:00\n",
-      "Generated RGB image for 2022-08-02T17:40:00\n",
-      "Generated RGB image for 2022-08-02T17:50:00\n",
-      "Generated RGB image for 2022-08-02T18:00:00\n",
-      "Generated RGB image for 2022-08-02T18:10:00\n",
-      "Generated RGB image for 2022-08-02T18:20:00\n",
-      "Generated RGB image for 2022-08-02T18:30:00\n",
-      "Generated RGB image for 2022-08-02T18:40:00\n",
-      "Generated RGB image for 2022-08-02T18:50:00\n",
-      "Generated RGB image for 2022-08-02T19:00:00\n",
-      "Generated RGB image for 2022-08-02T19:10:00\n",
-      "Generated RGB image for 2022-08-02T19:20:00\n",
-      "Generated RGB image for 2022-08-02T19:30:00\n",
-      "Generated RGB image for 2022-08-02T19:40:00\n",
-      "Generated RGB image for 2022-08-02T19:50:00\n",
-      "Generated RGB image for 2022-08-02T20:00:00\n",
-      "Generated RGB image for 2022-08-02T20:10:00\n",
-      "Generated RGB image for 2022-08-02T20:20:00\n",
-      "Generated RGB image for 2022-08-02T20:30:00\n",
-      "Generated RGB image for 2022-08-02T20:40:00\n",
-      "Generated RGB image for 2022-08-02T20:50:00\n",
-      "Generated RGB image for 2022-08-02T21:00:00\n",
-      "Generated RGB image for 2022-08-02T21:10:00\n",
-      "Generated RGB image for 2022-08-02T21:20:00\n",
-      "Generated RGB image for 2022-08-02T21:30:00\n",
-      "Generated RGB image for 2022-08-02T21:40:00\n",
-      "Generated RGB image for 2022-08-02T21:50:00\n",
-      "Generated RGB image for 2022-08-02T22:00:00\n",
-      "Generated RGB image for 2022-08-02T22:10:00\n",
-      "Generated RGB image for 2022-08-02T22:20:00\n",
-      "Generated RGB image for 2022-08-02T22:30:00\n",
-      "Generated RGB image for 2022-08-02T22:40:00\n",
-      "Generated RGB image for 2022-08-02T22:50:00\n",
-      "Generated RGB image for 2022-08-02T23:00:00\n",
-      "Generated RGB image for 2022-08-02T23:10:00\n",
-      "Generated RGB image for 2022-08-02T23:20:00\n",
-      "Generated RGB image for 2022-08-02T23:30:00\n",
-      "Generated RGB image for 2022-08-02T23:40:00\n",
-      "Generated RGB image for 2022-08-02T23:50:00\n"
+      "Generated RGB image for 2022-08-01T14:00:00\n",
+      "Generated RGB image for 2022-08-01T14:10:00\n",
+      "Generated RGB image for 2022-08-01T14:20:00\n",
+      "Generated RGB image for 2022-08-01T14:30:00\n",
+      "Generated RGB image for 2022-08-01T14:40:00\n",
+      "Generated RGB image for 2022-08-01T14:50:00\n",
+      "Generated RGB image for 2022-08-01T15:00:00\n",
+      "Generated RGB image for 2022-08-01T15:10:00\n",
+      "Generated RGB image for 2022-08-01T15:20:00\n",
+      "Generated RGB image for 2022-08-01T15:30:00\n",
+      "Generated RGB image for 2022-08-01T15:40:00\n",
+      "Generated RGB image for 2022-08-01T15:50:00\n",
+      "Generated RGB image for 2022-08-01T16:00:00\n",
+      "Generated RGB image for 2022-08-01T16:10:00\n",
+      "Generated RGB image for 2022-08-01T16:20:00\n",
+      "Generated RGB image for 2022-08-01T16:30:00\n",
+      "Generated RGB image for 2022-08-01T16:40:00\n",
+      "Generated RGB image for 2022-08-01T16:50:00\n",
+      "Generated RGB image for 2022-08-01T17:00:00\n",
+      "Generated RGB image for 2022-08-01T17:10:00\n",
+      "Generated RGB image for 2022-08-01T17:20:00\n",
+      "Generated RGB image for 2022-08-01T17:30:00\n",
+      "Generated RGB image for 2022-08-01T17:40:00\n",
+      "Generated RGB image for 2022-08-01T17:50:00\n",
+      "Generated RGB image for 2022-08-01T18:00:00\n",
+      "Generated RGB image for 2022-08-01T18:10:00\n",
+      "Generated RGB image for 2022-08-01T18:20:00\n",
+      "Generated RGB image for 2022-08-01T18:30:00\n",
+      "Generated RGB image for 2022-08-01T18:40:00\n",
+      "Generated RGB image for 2022-08-01T18:50:00\n",
+      "Generated RGB image for 2022-08-01T19:00:00\n",
+      "Generated RGB image for 2022-08-01T19:10:00\n",
+      "Generated RGB image for 2022-08-01T19:20:00\n",
+      "Generated RGB image for 2022-08-01T19:30:00\n",
+      "Generated RGB image for 2022-08-01T19:40:00\n",
+      "Generated RGB image for 2022-08-01T19:50:00\n",
+      "Generated RGB image for 2022-08-01T20:00:00\n",
+      "Generated RGB image for 2022-08-01T20:10:00\n",
+      "Generated RGB image for 2022-08-01T20:20:00\n",
+      "Generated RGB image for 2022-08-01T20:30:00\n",
+      "Generated RGB image for 2022-08-01T20:40:00\n",
+      "Generated RGB image for 2022-08-01T20:50:00\n",
+      "Generated RGB image for 2022-08-01T21:00:00\n",
+      "Generated RGB image for 2022-08-01T21:10:00\n",
+      "Generated RGB image for 2022-08-01T21:20:00\n",
+      "Generated RGB image for 2022-08-01T21:30:00\n",
+      "Generated RGB image for 2022-08-01T21:40:00\n",
+      "Generated RGB image for 2022-08-01T21:50:00\n",
+      "Generated RGB image for 2022-08-01T22:00:00\n",
+      "Generated RGB image for 2022-08-01T22:10:00\n",
+      "Generated RGB image for 2022-08-01T22:20:00\n",
+      "Generated RGB image for 2022-08-01T22:30:00\n",
+      "Generated RGB image for 2022-08-01T22:40:00\n",
+      "Generated RGB image for 2022-08-01T22:50:00\n",
+      "Generated RGB image for 2022-08-01T23:00:00\n",
+      "Generated RGB image for 2022-08-01T23:10:00\n",
+      "Generated RGB image for 2022-08-01T23:20:00\n",
+      "Generated RGB image for 2022-08-01T23:30:00\n",
+      "Generated RGB image for 2022-08-01T23:40:00\n",
+      "Generated RGB image for 2022-08-01T23:50:00\n"
      ]
     }
    ],
    "source": [
-    "date = '20220802'\n",
+    "date = '20220801'\n",
     "start_time = '1400'\n",
     "end_time = '2355'\n",
     "\n",
@@ -570,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
